<resources>
    <string name="app_name">Prepaid Card Portal</string>
    <string name="button">Read Card</string>
    <string name="paymentButton">Initiate Payment</string>
    <string name="title_app">Prepaid Card Portal</string>
    <string name="title_accept_payment">Accepting Payment</string>
    <string name="title_read_card">Reading Card</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="isMandator">is Mandatory</string>
    <string name="ACHBranch">Payee Branch</string>

    <string name="action_settings">Settings</string>
    <string name="terminal_options">Terminal Options</string>
    <string name="transaction_options">Transaction Options</string>
    <string name="choose_interface">Choose Interface</string>
    <string name="choose_reader">Choose Bluetooth Reader</string>
    <string name="library_info">Library Information</string>
    <string name="admin_settings_txt">Admin Settings</string>
    <string name="status">Status</string>
    <string name="current_interface">Current Interface</string>
    <string name="additional_info">Additional Info</string>
    <string name="transaction_logs">Transaction Logs</string>
    <string name="home">Home</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="operation">Operation</string>
    <string name="interfaceGuide">Please select an interface to communicate with card</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="built_in_nfc">Built in NFC Reader</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="available_profiles">Available Profiles</string>
    <string name="message_type">Issuer Message Format</string>
    <string name="network_url">Network Url</string>
    <string name="mpos_server_url">MPos server Url</string>
    <string name="currency_chooser">Choose a Currency</string>
    <string name="country_chooser">Choose a Country</string>
    <string name="network_url_hint">www.mastercard.com</string>
    <string name="mpos_server_url_hint">www.mastercard.com</string>
    <string name="main_permissions_no_read_storage">Read External Storage permission denied</string>
    <string name="main_permissions_no_write_storage">Write External Storage permission denied</string>
    <string name="nfc_not_supported">NFC not enabled or supported</string>
    <string name="bluetooth_not_supported">Bluetooth not enabled or supported</string>
    <string name="enter_amount">Enter amount</string>
    <string name="save">Save</string>

    <string name="data_saved">Data has been saved successfully</string>
    <string name="add_devices">Add new devices</string>
    <string name="get_logs">Get Logs</string>
    <string name="start_payment">Start Payment</string>
    <string name="read_card">Start Reading Card</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="unSupported_Operation">Library Operation Not Supported</string>

    <string name="log_type_debug">Debug</string>
    <string name="log_type_info">Info</string>
    <string name="log_type_warning">Warning</string>
    <string name="log_type_error">Error</string>


    <string-array name="log_type">
        <item>@string/log_type_debug</item>
        <item>@string/log_type_info</item>
        <item>@string/log_type_warning</item>
        <item>@string/log_type_error</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="pleaseWait">pleaseWait</string>
    <string name="ChangePass">changer le mot de passe</string>
    <string name="Logout">Logout</string>
    <string name="card_service">card service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CreditAccount">Credit Account</string>
    <string name="Amount">AMOUNT</string>
    <string name="Validation">Validation</string>
    <string name="Confirmation">Confirmation</string>
    <array name="details">
        <item>Rectification</item>
        <item>Confirmation</item>
        <item>Validation</item>
    </array>
</resources>
