<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/text_drawer_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status_text"
            style="@style/text_drawer_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/status"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/text_drawer_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/current_interface" />

        <TextView
            android:id="@+id/current_interface_text"
            style="@style/text_drawer_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/current_interface"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <TextView
        style="@style/text_drawer_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/additional_info" />

    <TextView
        android:id="@+id/additional_info_text"
        style="@style/text_drawer_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/additional_info"
        android:textColor="@color/colorWhite" />


</LinearLayout>
